manifests/mailcatcher/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  rules:
    - host: mailcatcher.la-suite.apps.digilab.network
      http:
        paths:
          - backend:
              service:
                name: svc
                port:
                  number: 1080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - mailcatcher.la-suite.apps.digilab.network
      secretName: mailcatcher-tls
